# local-vector-memory

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cover.html
src/local_vector_memory/: __init__.py  cli.py  core.py
src/local_vector_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
