[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-vector-memory"
version = "0.1.0"
description = "Zero-cloud local vector memory CLI — Ollama embeddings + Qdrant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "qdrant-client>=1.7.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
lvm = "local_vector_memory.cli:main"

[project.urls]
Homepage = "https://github.com/JanCong/local-vector-memory"
